# atlas

./: .git-blame-ignore-revs  .gitignore  README.md
atlas/: __init__.py  bootstrap.py  hooks.py  patches.txt  setup.py
bench/: README.md  bench-domain-provider.py  bench.toml  build.sh  deploy-site.py
llm/: self-serve-parallelism.md  tls-design.md
plan/: 00-overview.md  drift.md  phase-5-vm-provision.md
proxy/: README.md  build.sh
scripts/: bootstrap-server.py  bootstrap-server.sh  delete-snapshot-vm.py  delete-snapshot-vm.sh  host-pyproject.toml  install.sh  issue-cert.py  mgmt-firewall-apply.py  mgmt-firewall-confirm.py  mgmt-firewall-revert.py  pause-vm.py  pause-vm.sh  promote-snapshot-image.py  provision-vm.py  provision-vm.sh  pyproject.toml  rebuild-vm.py  rebuild-vm.sh  regenerate-host-keys-vm.py  resize-vm.py  resize-vm.sh  resume-vm.py  resume-vm.sh  snapshot-vm.py  snapshot-vm.sh  start-vm.py  stop-vm.py  sync-image.py  terminate-vm.py  terminate-vm.sh  vm-disk-up.py  vm-network-down.py  vm-network-down.sh  vm-network-up.py  vm-network-up.sh  vm-reserved-ip.py
scripts/lib/: prepare-rootfs.sh
scripts/lib/atlas/: _cli.py  _run.py  _task.py  certs.py  hostinfo.py  lvm.py  mgmt_firewall.py  network_env.py  paths.py  reserved_ip_nat.py  rootfs.py  test_certs.py  test_cli.py  test_entry_ergonomics.py  test_host.py  test_install_sh.py  test_lvm.py  test_mgmt_firewall.py  test_packaging.py  test_reserved_ip_nat.py
scripts/sudoers.d/: atlas-tunnel
scripts/systemd/: atlas-pool.service  firecracker-vm@.service
spec/: 01-architecture.md  02-doctypes.md  03-bootstrapping.md  04-tasks.md  05-virtual-machine-lifecycle.md  06-networking.md  07-filesystem-layout.md  08-images.md  09-roadmap.md  10-desk-ui.md  11-user-ui.md  12-proxy.md  13-tls.md  14-self-serve.md  (+7 more)
(+336 files in other folders)
